--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -27,17 +27,6 @@ layout: default
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <!-- 상단 고정 광고 -->
-    <div class="anchor-ad-top">
-      <ins class="adsbygoogle"
-           style="display:inline-block;width:728px;height:90px"
-           data-ad-client="ca-pub-9374368296307755"
-           data-ad-slot="3603389079"></ins>
-      <script>
-          (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
-    </div>
-    
   someData  
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -218,6 +207,17 @@ layout: default
 
 </head>
 <body>
+
+  <!-- 상단 고정 광고 -->
+  <div class="anchor-ad-top">
+    <ins class="adsbygoogle"
+         style="display:inline-block;width:728px;height:90px"
+         data-ad-client="ca-pub-9374368296307755"
+         data-ad-slot="3603389079"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </div>
   
   <!-- 본문 콘텐츠 -->
   <div id="main" role="main">
@@ -265,14 +265,12 @@ layout: default
 <!-- Liquid 템플릿에서 post_urls 변수를 정의 -->
 {% assign post_urls = site.posts | map: 'url' | jsonify %}
 
+<!-- JavaScript 코드에서 postUrls 변수를 사용 -->
 <script>
-  // _posts 폴더의 포스트 URL 목록을 Jekyll을 사용해 JavaScript 배열로 생성
-  const postUrls = [
-    {% for post in site.posts %}
-      "{{ post.url }}"{% if forloop.last == false %},{% endif %}
-    {% endfor %}
-  ]; 
-
+  const postUrls = JSON.parse('{{ post_urls | jsonify | escape }}');
+  console.log("Post URLs:", postUrls);
+</script>
+  
   <!-- 외부 JavaScript 파일 참조 -->
   <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
   
