--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -18,6 +18,18 @@ layout: default
   {% endunless %}
 {% endif %}
 
+<!-- 상단 앵커 광고 -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-9374368296307755"
+     data-ad-slot="3603389079"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+<!-- 상단 앵커 광고 끝 -->
+
 <div id="main" role="main">
   {% include sidebar.html %}
 
@@ -40,6 +52,21 @@ layout: default
       {% endunless %}
 
       <section class="page__content" itemprop="text">
+        <!-- 글 상단 광고 추가 -->
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755"
+             crossorigin="anonymous"></script>
+        <!-- kkdamoa 팝업 광고,글상단 -->
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-9374368296307755"
+             data-ad-slot="9952845435"
+             data-ad-format="auto"
+             data-full-width-responsive="true"></ins>
+        <script>
+             (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+        <!-- 글 상단 광고 끝 -->
+
         {% if page.toc %}
           <aside class="sidebar__right {% if page.toc_sticky %}sticky{% endif %}">
             <nav class="toc">
