--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -2,15 +2,6 @@
 layout: default
 ---
 
-<head>
-  <!-- AdSense 스크립트를 상단으로 이동 -->
-  <link rel="preconnect" href="https://pagead2.googlesyndication.com">
-  <link rel="dns-prefetch" href="https://pagead2.googlesyndication.com">
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755"
-     crossorigin="anonymous"></script>
-</head>
-
-<body>
 {% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
   {% include page__hero.html %}
 {% elsif page.header.video.id and page.header.video.provider %}
@@ -27,17 +18,21 @@ layout: default
   {% endunless %}
 {% endif %}
 
-<!-- 상단 앵커 광고 -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:90px"
-     data-ad-client="ca-pub-9374368296307755"
-     data-ad-slot="3603389079"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<!-- 상단 앵커 광고 끝 -->
+<!-- 상단 고정 앵커 광고 -->
+<div style="position: fixed; top: 0; width: 100%; z-index: 999; text-align: center; background-color: #fff;">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755" crossorigin="anonymous"></script>
+  <ins class="adsbygoogle"
+       style="display:inline-block;width:728px;height:90px"
+       data-ad-client="ca-pub-9374368296307755"
+       data-ad-slot="3603389079"></ins>
+  <script>
+       (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+</div>
+<!-- 상단 고정 앵커 광고 끝 -->
 
-<div id="main" role="main">
+<!-- 메인 콘텐츠에 상단 광고 높이만큼 여백 추가 -->
+<div id="main" role="main" style="margin-top: 100px;">
   {% include sidebar.html %}
 
   <article class="page" itemscope itemtype="https://schema.org/CreativeWork"{% if page.locale %} lang="{{ page.locale }}"{% endif %}>
@@ -59,18 +54,6 @@ layout: default
       {% endunless %}
 
       <section class="page__content" itemprop="text">
-        <!-- 글 상단 광고 추가 -->
-        <ins class="adsbygoogle"
-             style="display:block"
-             data-ad-client="ca-pub-9374368296307755"
-             data-ad-slot="9952845435"
-             data-ad-format="auto"
-             data-full-width-responsive="true"></ins>
-        <script>
-             (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
-        <!-- 글 상단 광고 끝 -->
-
         {% if page.toc %}
           <aside class="sidebar__right {% if page.toc_sticky %}sticky{% endif %}">
             <nav class="toc">
@@ -109,4 +92,3 @@ layout: default
     {% include page__related.html posts=site.posts %}
   {% endif %}
 </div>
-</body>
