--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -32,7 +32,7 @@ layout: default
   <title>광고 페이지</title>
 
   <!-- Google AdSense 스크립트 -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755"
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-"
           crossorigin="anonymous"></script>
 
   <style>
@@ -211,7 +211,7 @@ layout: default
   <div class="anchor-ad-top">
     <ins class="adsbygoogle"
          style="display:inline-block;width:728px;height:90px"
-         data-ad-client="ca-pub-9374368296307755"
+         data-ad-client="ca-"
          data-ad-slot="3603389079"></ins>
     <script>
         (adsbygoogle = window.adsbygoogle || []).push({});
@@ -228,7 +228,7 @@ layout: default
   <div class="anchor-ad-bottom">
     <ins class="adsbygoogle"
     style="display:inline-block;width:728px;height:90px"
-    data-ad-client="ca-pub-9374368296307755"
+    data-ad-client="ca-"
     data-ad-slot="4202989029"></ins>
   <script>
    (adsbygoogle = window.adsbygoogle || []).push({});
@@ -251,7 +251,7 @@ layout: default
     <h2>광고</h2>
     <ins class="adsbygoogle"
          style="display:block; margin: auto;"
-         data-ad-client="ca-pub-9374368296307755"
+         data-ad-client="ca-"
          data-ad-slot="9952845435"
          data-ad-format="auto"
          data-full-width-responsive="true"></ins>
