--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -32,7 +32,7 @@ layout: default
   <title>광고 페이지</title>
 
   <!-- Google AdSense 스크립트 -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-"
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755"
           crossorigin="anonymous"></script>
 
   <style>
@@ -251,7 +251,7 @@ layout: default
     <h2>광고</h2>
     <ins class="adsbygoogle"
          style="display:block; margin: auto;"
-         data-ad-client="ca-"
+         data-ad-client="ca-pub-9374368296307755"
          data-ad-slot="9952845435"
          data-ad-format="auto"
          data-full-width-responsive="true"></ins>
